// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screens matches snapshot for Activity 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 47,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 0,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 12,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#5C7268",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 12,
                  "lineHeight": 16,
                }
              }
              suppressHighlighting={true}
            >
              Placeholder tab. Content will land here.
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`screens matches snapshot for Explore 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 47,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 0,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 12,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#5C7268",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 12,
                  "lineHeight": 16,
                }
              }
              suppressHighlighting={true}
            >
              Placeholder tab. Content will land here.
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`screens matches snapshot for Home 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 47,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingBottom": 24,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <RCTScrollView
          collapsable={false}
          contentContainerStyle={
            {
              "flexGrow": 1,
            }
          }
          contentInset={
            {
              "bottom": 0,
            }
          }
          contentInsetAdjustmentBehavior="never"
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          keyboardDismissMode="on-drag"
          keyboardShouldPersistTaps="handled"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          scrollIndicatorInsets={
            {
              "bottom": 0,
            }
          }
          showsVerticalScrollIndicator={false}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "stretch",
                  "flexDirection": "column",
                  "gap": 12,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": "#E6EEE9",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "paddingBottom": 8,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 8,
                  }
                }
              />
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "flexDirection": "column",
                    "gap": 12,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#13241C",
                      "fontFamily": "Inter-Bold",
                      "fontSize": 16,
                      "lineHeight": 24,
                    }
                  }
                  suppressHighlighting={true}
                >
                  Home
                </Text>
                <Text
                  style={
                    {
                      "color": "#5C7268",
                      "fontFamily": "Inter-Medium",
                      "fontSize": 12,
                      "lineHeight": 16,
                    }
                  }
                  suppressHighlighting={true}
                >
                  Signed-in shortcuts for the account stack.
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "flexDirection": "column",
                    "gap": 12,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignSelf": "stretch",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#D7E6DC",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#1F7A4C",
                          "fontFamily": "Inter-Bold",
                          "fontSize": 16,
                          "lineHeight": 24,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Notifications
                    </Text>
                  </View>
                </View>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignSelf": "stretch",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#D7E6DC",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#1F7A4C",
                          "fontFamily": "Inter-Bold",
                          "fontSize": 16,
                          "lineHeight": 24,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Wallet
                    </Text>
                  </View>
                </View>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignSelf": "stretch",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#D7E6DC",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#1F7A4C",
                          "fontFamily": "Inter-Bold",
                          "fontSize": 16,
                          "lineHeight": 24,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Support
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            {
              "paddingBottom": 0,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "stretch",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#1F7A4C",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingBottom": 16,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
                suppressHighlighting={true}
              >
                Open wallet
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`screens matches snapshot for Login 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 47,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 0,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "stretch",
                  "flexDirection": "column",
                  "gap": 24,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "flexDirection": "column",
                    "gap": 8,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#13241C",
                      "fontFamily": "Inter-Bold",
                      "fontSize": 16,
                      "lineHeight": 24,
                    }
                  }
                  suppressHighlighting={true}
                >
                  Welcome back
                </Text>
                <Text
                  style={
                    {
                      "color": "#5C7268",
                      "fontFamily": "Inter-Medium",
                      "fontSize": 12,
                      "lineHeight": 16,
                    }
                  }
                  suppressHighlighting={true}
                >
                  Sign in to continue.
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "flexDirection": "column",
                    "gap": 12,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 8,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#13241C",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    Email
                  </Text>
                  <View
                    style={
                      {
                        "backgroundColor": "#E6EEE9",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <TextInput
                      accessibilityLabel="Email"
                      autoCapitalize="none"
                      autoCorrect={false}
                      keyboardType="email-address"
                      onChangeText={[Function]}
                      placeholder="you@example.com"
                      placeholderTextColor="#5C7268"
                      style={
                        {
                          "color": "#13241C",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 12,
                          "lineHeight": 16,
                          "padding": 0,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 8,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#13241C",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    Password
                  </Text>
                  <View
                    style={
                      {
                        "backgroundColor": "#E6EEE9",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <TextInput
                      accessibilityLabel="Password"
                      autoCapitalize="none"
                      autoCorrect={false}
                      onChangeText={[Function]}
                      placeholder="••••••••"
                      placeholderTextColor="#5C7268"
                      secureTextEntry={true}
                      style={
                        {
                          "color": "#13241C",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 12,
                          "lineHeight": 16,
                          "padding": 0,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "paddingBottom": 34,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 12,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignSelf": "stretch",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#1F7A4C",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingBottom": 16,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 16,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-Bold",
                      "fontSize": 16,
                      "lineHeight": 24,
                    }
                  }
                  suppressHighlighting={true}
                >
                  Log in
                </Text>
              </View>
            </View>
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignSelf": "stretch",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingBottom": 16,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 16,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#1F7A4C",
                      "fontFamily": "Inter-Bold",
                      "fontSize": 16,
                      "lineHeight": 24,
                    }
                  }
                  suppressHighlighting={true}
                >
                  Need an account? Register
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`screens matches snapshot for Notifications 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <RCTScrollView
          collapsable={false}
          contentContainerStyle={
            {
              "flexGrow": 1,
            }
          }
          contentInset={
            {
              "bottom": 0,
            }
          }
          contentInsetAdjustmentBehavior="never"
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          keyboardDismissMode="on-drag"
          keyboardShouldPersistTaps="handled"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          scrollIndicatorInsets={
            {
              "bottom": 0,
            }
          }
          showsVerticalScrollIndicator={false}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "stretch",
                  "flexDirection": "column",
                  "gap": 24,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": "#E6EEE9",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "paddingBottom": 8,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 8,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#13241C",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    Payout sent
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#5C7268",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    Yesterday’s transfer reached your bank.
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": "#E6EEE9",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "paddingBottom": 8,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 8,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#13241C",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    New sign-in
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#5C7268",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    A session started on this device.
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": "#E6EEE9",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "paddingBottom": 8,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 8,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#13241C",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    Weekly digest
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#5C7268",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    Three cards are waiting in Explore.
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            {
              "paddingBottom": 34,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "stretch",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#D7E6DC",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingBottom": 16,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#1F7A4C",
                    "fontFamily": "Inter-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
                suppressHighlighting={true}
              >
                Mark all read
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`screens matches snapshot for Profile 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 47,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <RCTScrollView
          collapsable={false}
          contentContainerStyle={
            {
              "flexGrow": 1,
            }
          }
          contentInset={
            {
              "bottom": 0,
            }
          }
          contentInsetAdjustmentBehavior="never"
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          keyboardDismissMode="on-drag"
          keyboardShouldPersistTaps="handled"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          scrollIndicatorInsets={
            {
              "bottom": 0,
            }
          }
          showsVerticalScrollIndicator={false}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "stretch",
                  "flexDirection": "column",
                  "gap": 24,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "flexDirection": "column",
                    "gap": 12,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignSelf": "stretch",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#D7E6DC",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#1F7A4C",
                          "fontFamily": "Inter-Bold",
                          "fontSize": 16,
                          "lineHeight": 24,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Notifications
                    </Text>
                  </View>
                </View>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignSelf": "stretch",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#D7E6DC",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#1F7A4C",
                          "fontFamily": "Inter-Bold",
                          "fontSize": 16,
                          "lineHeight": 24,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Wallet
                    </Text>
                  </View>
                </View>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignSelf": "stretch",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#D7E6DC",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#1F7A4C",
                          "fontFamily": "Inter-Bold",
                          "fontSize": 16,
                          "lineHeight": 24,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Support
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "flexDirection": "column",
                    "gap": 12,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#5C7268",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 12,
                      "lineHeight": 16,
                    }
                  }
                  suppressHighlighting={true}
                >
                  Theme
                </Text>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignSelf": "stretch",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#D7E6DC",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#1F7A4C",
                          "fontFamily": "Inter-Bold",
                          "fontSize": 16,
                          "lineHeight": 24,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Light
                    </Text>
                  </View>
                </View>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignSelf": "stretch",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#D7E6DC",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#1F7A4C",
                          "fontFamily": "Inter-Bold",
                          "fontSize": 16,
                          "lineHeight": 24,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Dark
                    </Text>
                  </View>
                </View>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignSelf": "stretch",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#1F7A4C",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#FFFFFF",
                          "fontFamily": "Inter-Bold",
                          "fontSize": 16,
                          "lineHeight": 24,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      System
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "flexDirection": "column",
                    "gap": 12,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#5C7268",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 12,
                      "lineHeight": 16,
                    }
                  }
                  suppressHighlighting={true}
                >
                  Language
                </Text>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignSelf": "stretch",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#1F7A4C",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#FFFFFF",
                          "fontFamily": "Inter-Bold",
                          "fontSize": 16,
                          "lineHeight": 24,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      English
                    </Text>
                  </View>
                </View>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignSelf": "stretch",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#D7E6DC",
                        "borderBottomLeftRadius": 8,
                        "borderBottomRightRadius": 8,
                        "borderTopLeftRadius": 8,
                        "borderTopRightRadius": 8,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#1F7A4C",
                          "fontFamily": "Inter-Bold",
                          "fontSize": 16,
                          "lineHeight": 24,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Turkish
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            {
              "paddingBottom": 0,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "stretch",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#D7E6DC",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingBottom": 16,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#1F7A4C",
                    "fontFamily": "Inter-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
                suppressHighlighting={true}
              >
                Log out
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`screens matches snapshot for Register 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <RCTScrollView
          collapsable={false}
          contentContainerStyle={
            {
              "flexGrow": 1,
            }
          }
          contentInset={
            {
              "bottom": 0,
            }
          }
          contentInsetAdjustmentBehavior="never"
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          keyboardDismissMode="on-drag"
          keyboardShouldPersistTaps="handled"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          scrollIndicatorInsets={
            {
              "bottom": 0,
            }
          }
          showsVerticalScrollIndicator={false}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "flexDirection": "column",
                    "gap": 24,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 8,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#13241C",
                        "fontFamily": "Inter-Bold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    Create account
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#5C7268",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    A few details and you are in.
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 12,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "stretch",
                        "flexDirection": "column",
                        "gap": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#13241C",
                          "fontFamily": "Inter-SemiBold",
                          "fontSize": 12,
                          "lineHeight": 16,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Email
                    </Text>
                    <View
                      style={
                        {
                          "backgroundColor": "#E6EEE9",
                          "borderBottomLeftRadius": 8,
                          "borderBottomRightRadius": 8,
                          "borderTopLeftRadius": 8,
                          "borderTopRightRadius": 8,
                          "overflow": "hidden",
                          "paddingBottom": 16,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "paddingTop": 16,
                        }
                      }
                    >
                      <TextInput
                        accessibilityLabel="Email"
                        autoCapitalize="none"
                        autoCorrect={false}
                        keyboardType="email-address"
                        onChangeText={[Function]}
                        placeholder="you@example.com"
                        placeholderTextColor="#5C7268"
                        style={
                          {
                            "color": "#13241C",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 12,
                            "lineHeight": 16,
                            "padding": 0,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "stretch",
                        "flexDirection": "column",
                        "gap": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#13241C",
                          "fontFamily": "Inter-SemiBold",
                          "fontSize": 12,
                          "lineHeight": 16,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Password
                    </Text>
                    <View
                      style={
                        {
                          "backgroundColor": "#E6EEE9",
                          "borderBottomLeftRadius": 8,
                          "borderBottomRightRadius": 8,
                          "borderTopLeftRadius": 8,
                          "borderTopRightRadius": 8,
                          "overflow": "hidden",
                          "paddingBottom": 16,
                          "paddingLeft": 16,
                          "paddingRight": 16,
                          "paddingTop": 16,
                        }
                      }
                    >
                      <TextInput
                        accessibilityLabel="Password"
                        autoCapitalize="none"
                        autoCorrect={false}
                        onChangeText={[Function]}
                        placeholder="••••••••"
                        placeholderTextColor="#5C7268"
                        secureTextEntry={true}
                        style={
                          {
                            "color": "#13241C",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 12,
                            "lineHeight": 16,
                            "padding": 0,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            {
              "paddingBottom": 34,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 12,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignSelf": "stretch",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#1F7A4C",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingBottom": 16,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 16,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-Bold",
                      "fontSize": 16,
                      "lineHeight": 24,
                    }
                  }
                  suppressHighlighting={true}
                >
                  Create account
                </Text>
              </View>
            </View>
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignSelf": "stretch",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingBottom": 16,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 16,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#1F7A4C",
                      "fontFamily": "Inter-Bold",
                      "fontSize": 16,
                      "lineHeight": 24,
                    }
                  }
                  suppressHighlighting={true}
                >
                  Already have an account? Log in
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`screens matches snapshot for Splash 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 47,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 34,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "stretch",
                  "flexDirection": "column",
                  "gap": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#13241C",
                    "fontFamily": "Inter-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "textAlign": "center",
                  }
                }
                suppressHighlighting={true}
              >
                Boilerplate
              </Text>
              <Text
                style={
                  {
                    "color": "#5C7268",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 12,
                    "lineHeight": 16,
                    "textAlign": "center",
                  }
                }
                suppressHighlighting={true}
              >
                Loading
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`screens matches snapshot for Support 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <RCTScrollView
          collapsable={false}
          contentContainerStyle={
            {
              "flexGrow": 1,
            }
          }
          contentInset={
            {
              "bottom": 0,
            }
          }
          contentInsetAdjustmentBehavior="never"
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          keyboardDismissMode="on-drag"
          keyboardShouldPersistTaps="handled"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          scrollIndicatorInsets={
            {
              "bottom": 0,
            }
          }
          showsVerticalScrollIndicator={false}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "stretch",
                  "flexDirection": "column",
                  "gap": 24,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": "#E6EEE9",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "paddingBottom": 8,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 8,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#13241C",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    Where is my session stored?
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#5C7268",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    On this device only. Sign out clears it.
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": "#E6EEE9",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "paddingBottom": 8,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 8,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#13241C",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    How do I change language?
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#5C7268",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    Profile → Language. It applies on every screen.
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            {
              "paddingBottom": 34,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "stretch",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#1F7A4C",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingBottom": 16,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
                suppressHighlighting={true}
              >
                Contact support
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`screens matches snapshot for Wallet 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingBottom": 16,
            "paddingLeft": 24,
            "paddingRight": 24,
            "paddingTop": 24,
          }
        }
      >
        <RCTScrollView
          collapsable={false}
          contentContainerStyle={
            {
              "flexGrow": 1,
            }
          }
          contentInset={
            {
              "bottom": 0,
            }
          }
          contentInsetAdjustmentBehavior="never"
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          keyboardDismissMode="on-drag"
          keyboardShouldPersistTaps="handled"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          scrollIndicatorInsets={
            {
              "bottom": 0,
            }
          }
          showsVerticalScrollIndicator={false}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "stretch",
                  "flexDirection": "column",
                  "gap": 24,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": "#E6EEE9",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "paddingBottom": 8,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "stretch",
                      "flexDirection": "column",
                      "gap": 8,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#5C7268",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 12,
                        "lineHeight": 16,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    Available
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#13241C",
                        "fontFamily": "Inter-Bold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    1,240.00
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "stretch",
                    "flexDirection": "column",
                    "gap": 12,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#5C7268",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 12,
                      "lineHeight": 16,
                    }
                  }
                  suppressHighlighting={true}
                >
                  Recent
                </Text>
                <View
                  style={
                    {
                      "backgroundColor": "#E6EEE9",
                      "borderBottomLeftRadius": 8,
                      "borderBottomRightRadius": 8,
                      "borderTopLeftRadius": 8,
                      "borderTopRightRadius": 8,
                      "paddingBottom": 8,
                      "paddingLeft": 8,
                      "paddingRight": 8,
                      "paddingTop": 8,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "stretch",
                        "flexDirection": "column",
                        "gap": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#13241C",
                          "fontFamily": "Inter-SemiBold",
                          "fontSize": 12,
                          "lineHeight": 16,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Transfer in
                    </Text>
                    <Text
                      style={
                        {
                          "color": "#5C7268",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 12,
                          "lineHeight": 16,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      From checking · today
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "backgroundColor": "#E6EEE9",
                      "borderBottomLeftRadius": 8,
                      "borderBottomRightRadius": 8,
                      "borderTopLeftRadius": 8,
                      "borderTopRightRadius": 8,
                      "paddingBottom": 8,
                      "paddingLeft": 8,
                      "paddingRight": 8,
                      "paddingTop": 8,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "stretch",
                        "flexDirection": "column",
                        "gap": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#13241C",
                          "fontFamily": "Inter-SemiBold",
                          "fontSize": 12,
                          "lineHeight": 16,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      Card payout
                    </Text>
                    <Text
                      style={
                        {
                          "color": "#5C7268",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 12,
                          "lineHeight": 16,
                        }
                      }
                      suppressHighlighting={true}
                    >
                      To bank · yesterday
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            {
              "paddingBottom": 34,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "stretch",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#1F7A4C",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingBottom": 16,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
                suppressHighlighting={true}
              >
                Send
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
